--- a/The Detective Is Already Dead Epub.html
+++ b/The Detective Is Already Dead Epub.html
@@ -44,13 +44,13 @@
       <p id="top">We were currently adding a lots of Light Novel. Sorry for having a trouble to you!</p>
     </div>
     <!--Contents-->
-    <div id="contents" class="w3-container">
+    <div id="contents" class="w3-container" style="overflow-y:hidden;height: auto;">
       <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 10px;">
         <h3 id="collections">The Detective Is Already Dead EPUB</h3>
       </div>
       <!--Items-->
       <div class="body-content">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMyNrovcYrDPfzQPm8qw8l2IArczasj17grw&usqp=CAU" alt="Cover Photo" />
+        <img id="body-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMyNrovcYrDPfzQPm8qw8l2IArczasj17grw&usqp=CAU" alt="Cover Photo" />
         <article>
           <br/>
           <h3 class="w3-text-green" id="description-title">Description</h3>
