--- a/Assassins Pride.html
+++ b/Assassins Pride.html
@@ -6,20 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Come and download anything for free" />
-  <title>Anohana Light Novel</title>
+  <title>Assassins Pride Light Novel</title>
   <!--Styling Page-->
   <link rel="stylesheet" href="dreamchaser.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="w3.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-  <style>
-    @media only screen and (min-width:1000px) {
-      .body-content>img {
-        float: left;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -45,21 +38,23 @@
     </div>
     <!--Contents-->
     <div id="contents" class="w3-container" style="overflow-y:hidden;height: auto;">
-      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 10px;">
-        <h3 id="collections">Anohana Light Novel</h3>
+      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 0;">
+        <h3 id="collections">Assassins Pride Light Novel - EPUB</h3>
       </div>
       <!--Items-->
       <div class="body-content">
-        <img id="body-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTitdis-K_bj2AW5G0M1871GMuIAHTbJI9yJQ&usqp=CAU" alt="Cover Photo" />
+        <img id="body-cover" src="Assassins Pride/Assassin-Pride-Light-Novel.jpg" alt="Cover Photo" />
         <article>
           <br />
           <h3 class="w3-text-green" id="description-title">Description</h3>
           <p id="description-content">
-            The young girl appeared at the end of summer.<br /><br />We had been very close childhood friends, regardless of time. We formed the ‘Super Peace Busters’ and had always played with each other. However, when we had become high school students, we were poles apart. Jintan became a shut-in. Anaru endeavoured to meet the expectations of her female friends. Yukiatsu and Tsuruko entered an elite high school. Poppo gave up studying and travelled around the world. Finally, the only one unchanged, a girl called Menma, suddenly appeared in front of Jintan, hoping he can help her to grant her wish. With this turning point she induced, the six of them gathered once again…
+            As an aristocrat, Merida Angel studied at an academy that developed mana users but she did not have any mana. Kufa Vanpiel was dispatched to be her tutor and at the same time he was ordered to assassinate the girl if she did not have any talent. “Do you want to try to entrust your life to me?” he asked, as not an assassin nor a tutor but as someone that was betting on his pride as an assassin tutor, to show the girl’s worth to the world.
           </p>
           <br>
           <p class="w3-text-blue">All Volume Epub</p>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/pFA">Volume 01</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/Assassins-pride-vol1-pub">Volume 01</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/Assassins-pride-vol2-epub">Volume 02</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="http://fumacrom.com/2rWRz">Volume 03</a></h5>
         </article>
         <br>
         <p id="comment">
