--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@
       </div>
       <div id="social" class="w3-container">
         <h3 class="w3-text-green">Social Accounts</h3>
-        <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+        <a href="https://www.facebook.com/flnovels/"><i class="fab fa-facebook"></i> Facebook</a>
         <a href="mailto:superdenz2003@gmail.com"><i class="fas fa-envelope"></i> Gmail</a>
       </div>
       <div class="w3-container" style="margin-top: 15px;">
