--- a/The Detective Is Already Dead Epub.html
+++ b/The Detective Is Already Dead Epub.html
@@ -33,7 +33,7 @@
     </div>
     <!--Menu Content-->
     <div class="menu-container">
-      <p><a href="index.html">Home</a></p>
+      <p><a href="home.html">Home</a></p>
       <p><a href="about-us.html">About Us</a></p>
     </div>
   </div>
