--- a/Shes the cutest but where just friends.html
+++ b/Shes the cutest but where just friends.html
@@ -6,13 +6,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Come and download anything for free" />
-  <title>Assassins Pride Light Novel</title>
+  <title>She’s the Cutest… But We’re Just Friends Light Novel</title>
   <!--Styling Page-->
   <link rel="stylesheet" href="dreamchaser.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="w3.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <style>
+    @media only screen and (min-width:1000px) {
+      .body-content>img {
+        float: left;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -38,30 +45,33 @@
     </div>
     <!--Contents-->
     <div id="contents" class="w3-container" style="overflow-y:hidden;height: auto;">
-      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 0;">
-        <h3 id="collections">Assassins Pride Light Novel - EPUB</h3>
+      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 10px;">
+        <h3 id="collections">She’s the Cutest… But We’re Just Friends Light Novel</h3>
       </div>
       <!--Items-->
       <div class="body-content">
-        <img id="body-cover" src="Assassins Pride/Assassin-Pride-Light-Novel.jpg" alt="Cover Photo" />
+        <img id="body-cover" src="https://dl.dropbox.com/s/92od0wlynq7r9wx/1-2.jpg?dl=0" alt="Cover Photo" />
         <article>
           <br />
           <h3 class="w3-text-green" id="description-title">Description</h3>
           <p id="description-content">
-            As an aristocrat, Merida Angel studied at an academy that developed mana users but she did not have any mana. Kufa Vanpiel was dispatched to be her tutor and at the same time he was ordered to assassinate the girl if she did not have any talent. “Do you want to try to entrust your life to me?” he asked, as not an assassin nor a tutor but as someone that was betting on his pride as an assassin tutor, to show the girl’s worth to the world.
+            Kai Nakamura has the average range of otaku hobbies for a high school boy, but the buddy he shares them with is far from ordinary… Kai’s best friend in the whole world is Jun Miyakawa, his classmate known as a super hottie. Though Kai and Jun just met when they enrolled in high school, they hit it off with passion for all the same hobbies! When they’re together, the pair never have enough hours in the day. Kai and Jun can’t get enough of each other’s company as they chat about video games and manga or sing anime songs at karaoke. Love is fleeting, but friendship is forever in this “just friends” rom-com filled with flirty fun!
           </p>
           <br>
           <p class="w3-text-blue">All Volume Epub</p>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/Assassins-pride-vol1-pub">Volume 01</a></h5>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/Assassins-pride-vol2-epub">Volume 02</a></h5>
-          <h5 id="dl-content">Download --&gt; <a href="http://fumacrom.com/2rWRz">Volume 03</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutest-epub">Volume 01</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutest-pdf">Volume 02</a></h5>
+          <br/>
+          <p class="w3-text-blue">All Volume Pdf</p>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/shesthecutestvol1-pdf">Volume 1</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutestvol2-pdf">Volume 2</a></h5>
         </article>
         <br>
         <p id="comment">
           Leave your thought or problem on our social media account.
         </p>
         <div id="social">
-          <a href="https://www.facebook.com/flnovels/"><i class="fab fa-facebook"></i> Facebook</a>
+          <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
           <a href="mailto:superdenz2003@gmail.com"><i class="fas fa-envelope"></i> Gmail</a>
         </div>
         <br>
