--- a/Assassins Pride.html
+++ b/Assassins Pride.html
@@ -43,7 +43,7 @@
       </div>
       <!--Items-->
       <div class="body-content">
-        <img id="body-cover" src="Assassins Pride/Assassin-Pride-Light-Novel.jpg" alt="Cover Photo" />
+        <img id="body-cover" src="https://dl.dropbox.com/s/zxk3wo9ve47cxhu/assassin-pride-light-novel.jpg?dl=0" alt="Cover Photo" />
         <article>
           <br />
           <h3 class="w3-text-green" id="description-title">Description</h3>
