--- a/Anohana Light Novel.html
+++ b/Anohana Light Novel.html
@@ -40,12 +40,9 @@
   <div id="topCon"></div>
   <!--Main Container-->
   <div class="main-container w3-container w3-padding-large">
-    <div class="w3-container w3-pale-green w3-leftbar w3-border-green w3-padding-large w3-margin">
-      <p id="top">We were currently adding a lots of Light Novel. Sorry for having a trouble to you!</p>
-    </div>
     <!--Contents-->
     <div id="contents" class="w3-container" style="overflow-y:hidden;height: auto;">
-      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 10px;">
+      <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 0;">
         <h3 id="collections">Anohana Light Novel</h3>
       </div>
       <!--Items-->
