--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="dreamchaser.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="w3.css" type="text/css" media="all" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css" type="text/css" media="all" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
 
@@ -57,8 +56,8 @@
     <fieldset>
       <legend><span>About Us</span></legend>
       <article>
-          DreamChaser has named similar to the group itself and is a lightweight and open source code. The DreamChaser is a group of 1st year collage students who still learning about web development. At first, DreamChaser is just a mere school project but we backup the files before submit it to our Professor. As we do not want our effort to go to waste, we decided to share it to public. We were intentionally to make this webpage a free downloader for Light Novels and Modded Applications. We will keep this page update and put more features, so stay tune and thank you for using our little web.<br/><br/>
-          If you have any questions, problems, suggestions .etc, please to send those to our social accounts.
+          DreamChaser has named similar to the group itself. The DreamChaser is a group of a 1st year collage students who still learning about web development. At first, DreamChaser is just a mere school project but we backup the files before submit it to our Professor. As we do not want our effort to go to waste, we decided to share it to public. We were intentionally to make this webpage a free downloader for Light Novels and Modded Applications. We will keep this page update and put more features, so stay tune and thank you for using our little web.<br/><br/>
+          If you have any questions, problems, suggestions .etc, please to send those to our social media accounts.
       </article>
       <div id="team" class="w3-container">
         <h3 class="w3-text-orange">Team Members</h3>
