--- a/majo no tabitabi.html
+++ b/majo no tabitabi.html
@@ -6,19 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Come and download anything for free" />
-  <title>She’s the Cutest… But We’re Just Friends Light Novel</title>
+  <title>Wondering Witch: The Journey Of Elaina Light Novel</title>
   <!--Styling Page-->
   <link rel="stylesheet" href="dreamchaser.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="w3.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-  <style>
-    @media only screen and (min-width:1000px) {
-      .body-content>img {
-        float: left;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -42,32 +35,32 @@
     <!--Contents-->
     <div id="contents" class="w3-container" style="overflow-y:hidden;height: auto;">
       <div class="w3-container w3-purple w3-text-white w3-text-large" style="margin-bottom: 0;">
-        <h3 id="collections">She’s the Cutest… But We’re Just Friends Light Novel</h3>
+        <h3 id="collections">Wondering Witch: The Journey Of Elaina Light Novel</h3>
       </div>
       <!--Items-->
       <div class="body-content">
-        <img id="body-cover" src="https://dl.dropbox.com/s/92od0wlynq7r9wx/1-2.jpg?dl=0" alt="Cover Photo" />
+        <img id="body-cover" src="https://dl.dropbox.com/s/i77lffzi1k7jxnl/majo%20no%20tabitabi.jpg?dl=0" alt="Cover Photo" />
         <article>
           <br />
           <h3 class="w3-text-green" id="description-title">Description</h3>
           <p id="description-content">
-            Kai Nakamura has the average range of otaku hobbies for a high school boy, but the buddy he shares them with is far from ordinary… Kai’s best friend in the whole world is Jun Miyakawa, his classmate known as a super hottie. Though Kai and Jun just met when they enrolled in high school, they hit it off with passion for all the same hobbies! When they’re together, the pair never have enough hours in the day. Kai and Jun can’t get enough of each other’s company as they chat about video games and manga or sing anime songs at karaoke. Love is fleeting, but friendship is forever in this “just friends” rom-com filled with flirty fun!
+          Once upon a time, there was a witch named Elaina, who set off on a journey across the world. Along the way, she would meet all kinds of people, from a country full of witches to a giant in love with his own muscles-but with each meeting, Elaina would become a small part of their story, and her own world would get a little bit bigger.
           </p>
           <br>
           <p class="w3-text-blue">All Volume Epub</p>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutest-epub">Volume 01</a></h5>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutest-pdf">Volume 02</a></h5>
-          <br/>
-          <p class="w3-text-blue">All Volume Pdf</p>
-          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/shesthecutestvol1-pdf">Volume 1</a></h5>
-          <h5 id="dl-content">Download --&gt; <a href="https://rshrt.com/shesthecutestvol2-pdf">Volume 2</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol1-epub">Volume 01</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol2-epub">Volume 02</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol3-epub">Volume 03</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol4-epub">Volume 04</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol5-epub">Volume 05</a></h5>
+          <h5 id="dl-content">Download --&gt; <a href="https://reshrt.com/elaina-vol6-epub">Volume 06</a></h5>
         </article>
         <br>
         <p id="comment">
           Leave your thought or problem on our social media account.
         </p>
         <div id="social">
-          <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
+          <a href="https://www.facebook.com/flnovels/"><i class="fab fa-facebook"></i> Facebook</a>
           <a href="mailto:superdenz2003@gmail.com"><i class="fas fa-envelope"></i> Gmail</a>
         </div>
         <br>
